--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf dist",
-    "dev": "webpack-dev-server -d --open --progress",
-    "build": "webpack -p --hide-modules --progress && cp static/index.html ./"
+    "dev": "webpack-dev-server -d",
+    "build": "webpack -p --hide-modules && cp static/index.html ./"
   },
   "repository": {
     "type": "git",
