--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.1",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
@@ -48,6 +52,8 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "github-api": "^3.3.0",
     "nprogress": "^0.2.0"
   }
 }
