--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "github-api": "^3.3.0",
-    "nprogress": "^0.2.0"
+    "nprogress": "^0.2.0",
+    "vue-meta": "^2.3.3"
   }
 }
