--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "axios": "^0.19.2",
     "github-api": "^3.3.0",
     "nprogress": "^0.2.0",
+    "v-tooltip": "^2.0.3",
     "vue-meta": "^2.3.3"
   }
 }
