--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@vue/composition-api": "^0.4.0",
     "axios": "^0.19.2",
     "buefy": "^0.8.12",
     "github-api": "^3.3.0",
