--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "lint": "eslint src/**/*.vue --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf dist",
-    "dev": "webpack-dev-server -d",
-    "build": "webpack -p --hide-modules && cp static/index.html ./"
+    "dev": "cross-env NODE_ENV=dev webpack-dev-server",
+    "build": "cross-env NODE_ENV=prod webpack",
+    "site": "npm run build && cp static/index.html ./"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,9 @@
     "@babel/runtime": "^7.8.7",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
+    "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
@@ -40,15 +43,18 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "terser-webpack-plugin": "^2.3.5",
     "vue-loader": "^15.9.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
     "@vue/composition-api": "^0.4.0",
