--- a/.babelrc
+++ b/.babelrc
@@ -8,12 +8,13 @@
           "browsers": [
             "> 1%",
             "last 3 versions",
-            "ie >= 9",
-            "ios >= 8",
-            "android >= 4.2"
+            "ie >= 11",
+            "ios >= 11",
+            "android >= 4.4"
           ]
         }
-      }
+      },
+      "@babel/preset-typescript"
     ]
   ],
   "plugins": [
