--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/core": "^7.8.7",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
+    "@babel/preset-typescript": "^7.8.3",
     "@babel/runtime": "^7.8.7",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
@@ -48,6 +49,7 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "terser-webpack-plugin": "^2.3.5",
+    "ts-loader": "^6.2.1",
     "vue-loader": "^15.9.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
@@ -61,6 +63,7 @@
     "axios": "^0.19.2",
     "buefy": "^0.8.13",
     "github-api": "^3.3.0",
+    "typescript": "^3.8.3",
     "vue-meta": "^2.3.3"
   }
 }
