--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Vue AimWhy",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint src/**/*.vue --fix",
+    "lint": "eslint src/**/*.{js,vue} --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf dist",
     "dev": "cross-env NODE_ENV=dev webpack-dev-server",
